--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     #user-info button {
       background:rgba(255,255,255,0.8);
       border:none; border-radius:0.3rem;
-      padding:0.2rem 0.6rem; font-weight: 600; cursor:pointer;
+      padding:0.2rem 0.6rem; p0; cursor:pointer;
     }
 
     /* clouds visible but don’t catch taps */
@@ -60,7 +60,7 @@
     #start-screen h1 {
     color: #fff;
     font-size: 4rem;
-    font-weight: 600;
+    p0;
     text-transform: uppercase;
     letter-spacing: 0.1rem;
     text-align: center;
@@ -79,7 +79,7 @@
     background: #3EAFF6;
     color: #fff;
     font-size: 1.4rem;
-    font-weight: 600;
+    p0;
     padding: 0.8rem 2.5rem;
     border: none;
     border-radius: 2rem;
@@ -103,7 +103,7 @@
   .btn-secondary {
   background: rgba(255,255,255,0.8);
   color: #000;
-  font-weight: 600;
+  p0;
   padding: 0.2rem 0.6rem;
   font-size: 0.9rem;
   border: none;
@@ -120,7 +120,7 @@
       background: #3EAFF6;
       color: #fff;
       font-size: 1.4rem;
-      font-weight: 600;
+      p0;
       padding: 0.8rem 2.5rem;
       border: none;
       border-radius: 2rem;
@@ -171,7 +171,7 @@
       background:rgba(0,0,0,0.4); z-index:4; pointer-events:none;
     }
     #pause-overlay .paused-text {
-      font-family:'Poppins',sans-serif; font-size:4rem; font-weight: 600;
+      font-family:'Poppins',sans-serif; font-size:4rem; p0;
       color:#fff; text-transform:uppercase; letter-spacing:.1rem;
       -webkit-text-stroke:1px #000;
     }
@@ -182,7 +182,7 @@
       z-index:3; cursor:pointer;
     }
     #game-over-screen h2 {
-      font-family:'Poppins',sans-serif; color:#3EAFF6; font-size:4rem; font-weight: 600;
+      font-family:'Poppins',sans-serif; color:#3EAFF6; font-size:4rem; p0;
       text-transform:uppercase; letter-spacing:.1rem; -webkit-text-stroke:1px #000;
     }
     .result-wrapper { position:relative; width:300px; height:300px; }
@@ -193,7 +193,7 @@
     }
     .results {
       position:absolute; top:50%; left:50%; transform:translate(-50%,-50%);
-      color:#fff; font-size:2rem; font-weight: 600;
+      color:#fff; font-size:2rem; p0;
       text-transform:uppercase; letter-spacing:.15rem;
       -webkit-text-stroke:2px #000; text-align:center; line-height:1.3;
     }
@@ -231,7 +231,7 @@
       position:absolute; top:1rem; right:1rem;
       background:#3EAFF6; color:#fff;
       border:none; border-radius:0.3rem;
-      padding:0.5rem 1rem; font-weight: 600;
+      padding:0.5rem 1rem; p0;
       cursor:pointer;
     }
     #leaderboard-screen ol {
@@ -267,7 +267,7 @@
     content: attr(data-rank);
     background: #3EAFF6;
     color: #fff;
-    font-weight: 600;
+    p0;
     font-size: 0.9rem;
     padding: 0.25rem 0.6rem;
     border-radius: 1rem;
@@ -413,13 +413,13 @@
    </div>
   </div>
   <div id="game-over-screen" style="flex-direction: column; align-items: center; justify-content: center; gap: 2rem; z-index: 3;">
-   <h1 style="color: #fff; font-size: 5rem; font-weight: 600; text-transform: uppercase; letter-spacing: 0.1rem; text-align: center; line-height: 1.1; text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3); -webkit-text-stroke: 0.6px #0F3D75;">
+   <h1 style="color: #fff; font-size: 4rem; p0; text-transform: uppercase; letter-spacing: 0.1rem; text-align: center; line-height: 1.1; text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3); -webkit-text-stroke: 0.6px #0F3D75;">
     GAME OVER
    </h1>
    <div class="result-wrapper">
     <div class="orb-bg" style="display:none;">
     </div>
-    <div class="results" style="color: #fff; font-size: 2rem; font-weight: 600; text-align: center;text-shadow: 0 0 4px #000; text-transform: uppercase;">
+    <div class="results" style="color: #fff; font-size: 2rem; p0; text-align: center;text-shadow: 0 0 4px #000; text-transform: uppercase;">
      SCORE:
      <span id="finalScore">
       0
@@ -432,7 +432,7 @@
     </div>
    </div>
    
-<div id="rankMessage" style="font-size: 1.6rem; font-weight: 600; color: #fff; text-align: center; text-shadow: 0 0 4px #000;">
+<div id="rankMessage" style="font-size: 1.6rem; p0; color: #fff; text-align: center; text-shadow: 0 0 4px #000;">
 </div>
 
   <button class="btn-primary" id="homeBtn">
