--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
  <head>
   <script src="https://sdk.minepi.com/pi-sdk.js">
   </script>
+<script>
+  document.getElementById("start-screen").classList.add("show");
+</script>
   <script>
    Pi.init({ version: "2.0", sandbox: true });
   </script>
+<script>
+  document.getElementById("start-screen").classList.add("show");
+</script>
   <meta charset="utf-8"/>
   <meta content="width=device-width,initial-scale=1" name="viewport"/>
   <title>
@@ -13,6 +19,9 @@
   </title>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js">
   </script>
+<script>
+  document.getElementById("start-screen").classList.add("show");
+</script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&amp;display=swap" rel="stylesheet"/>
   <style>
 
@@ -918,6 +927,9 @@ document.getElementById('best-score-hud').innerText = `Best: ${highScore}`;
       });
     }
   </script>
+<script>
+  document.getElementById("start-screen").classList.add("show");
+</script>
   <div id="fade-screen">
   </div>
  </body>
