--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
   <style>
 
   #best-score-hud {
+  font-size: 1.6rem;
+  -webkit-text-stroke: 1px #000;
+  text-shadow: none;
   top: 20px;
   left: 16px;
   font-size: 1.1rem;
