--- a/index.html
+++ b/index.html
@@ -26,13 +26,6 @@
   <style>
 
   #best-score-hud {
-  font-size: 1.6rem;
-  -webkit-text-stroke: 1px #000;
-  text-shadow: none;
-  top: 20px;
-  left: 16px;
-  font-size: 1.1rem;
-
     position: absolute;
     top: 64px;
     left: 16px;
@@ -484,7 +477,7 @@
      </span>
      <br/>
      BEST:
-     <!-- removed bestScore from game over screen -->
+     <span id="bestScore">
       0
      </span>
     </div>
@@ -673,7 +666,7 @@ function create() {
       points=this.physics.add.group();
 
       // HUD
-      scoreText=this.add.text(16,40,'Score: 0',{
+      scoreText=this.add.text(16,16,'Score: 0',{
         fontFamily:'Poppins', fontSize:'36px',
         color:'#fff', stroke:'#000', strokeThickness:4
       }).setDepth(2).setVisible(false);
