--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <script src="https://sdk.minepi.com/pi-sdk.js">
   </script>
 <script>
-  document.getElementById("start-screen").classList.add("show");
+  
 </script>
   <script>
    Pi.init({ version: "2.0", sandbox: true });
   </script>
 <script>
-  document.getElementById("start-screen").classList.add("show");
+  
 </script>
   <meta charset="utf-8"/>
   <meta content="width=device-width,initial-scale=1" name="viewport"/>
@@ -20,7 +20,7 @@
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js">
   </script>
 <script>
-  document.getElementById("start-screen").classList.add("show");
+  
 </script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&amp;display=swap" rel="stylesheet"/>
   <style>
@@ -825,6 +825,7 @@ scoreText.setVisible(true);
 
 document.getElementById('homeBtn').addEventListener('click', () => {
   fadeIn(() => {
+    document.getElementById('best-score-hud').style.display = 'none';
     window.location.href = window.location.href;
   });
 });
@@ -943,7 +944,7 @@ document.getElementById('best-score-hud').innerText = `Best: ${highScore}`;
     }
   </script>
 <script>
-  document.getElementById("start-screen").classList.add("show");
+  
 </script>
   <div id="fade-screen">
   </div>
