--- a/index.html
+++ b/index.html
@@ -26,13 +26,6 @@
   <style>
 
   #best-score-hud {
-  display: flex;
-  flex-direction: column;
-  gap: 0.2rem;
-  font-size: 1.6rem;
-  -webkit-text-stroke: 1px #000;
-  text-shadow: none;
-
   font-size: 1.6rem;
   -webkit-text-stroke: 1px #000;
   text-shadow: none;
@@ -418,10 +411,7 @@
   </div>
   <div class="bg-cloud three">
   </div>
-  <div id="hud-container" style="position:absolute;top:16px;left:16px;z-index:2;">
-  <div id="best-score-hud" style="font-size:1.6rem;color:#fff;font-family:'Poppins',sans-serif;-webkit-text-stroke:1px #000;">Best: 0</div>
-  <div id="score-hud" style="font-size:1.6rem;color:#fff;font-family:'Poppins',sans-serif;-webkit-text-stroke:1px #000;">Score: 0</div>
-</div>
+  <div id="best-score-hud">Best: 0</div>
 <div class="bg-cloud four">
   </div>
   <div id="start-screen">
@@ -680,8 +670,7 @@ function create() {
       points=this.physics.add.group();
 
       // HUD
-      // scoreText replaced with DOM HUD
-// scoreText=this.add.text(16,44,'Score: 0',{
+      scoreText=this.add.text(16,44,'Score: 0',{
         fontFamily:'Poppins', fontSize:'36px',
         color:'#fff', stroke:'#000', strokeThickness:4
       }).setDepth(2).setVisible(false);
@@ -802,7 +791,7 @@ document.getElementById('startBtn').addEventListener('click', ()=>{
     document.getElementById('start-screen').classList.remove('show');
     gameStarted=true;
     document.querySelector('canvas').style.visibility='visible';
-    document.getElementById('hud-container').style.display = 'block';
+    document.getElementById('best-score-hud').style.display = 'block';
 document.getElementById('best-score-hud').innerText = `Best: ${highScore}`;
 scoreText.setVisible(true);
     pauseIcon.setVisible(true);
@@ -934,9 +923,9 @@ document.getElementById('best-score-hud').innerText = `Best: ${highScore}`;
       pt.destroy();
       score++;
       sfx.point.play();
-      document.getElementById('score-hud').innerText = 'Score: ' + score;
+      scoreText.setText('Score: '+score);
       this.tweens.add({
-        targets: this.cameras.main, // neutralize tween target to avoid crash
+        targets:scoreText,
         scaleX:1.1, scaleY:1.1,
         yoyo:true, duration:80, ease:'Sine.easeOut'
       });
