--- a/index.html
+++ b/index.html
@@ -2,19 +2,35 @@
 <html lang="en">
  <head>
   <script src="https://sdk.minepi.com/pi-sdk.js">
-  </script>
+  
+window.addEventListener("DOMContentLoaded", () => {
+});
+
+</script>
 <script>
   window.addEventListener("DOMContentLoaded", () => {
   document.getElementById("start-screen").classList.add("show");
 });
+
+window.addEventListener("DOMContentLoaded", () => {
+});
+
 </script>
   <script>
    Pi.init({ version: "2.0", sandbox: true });
-  </script>
+  
+window.addEventListener("DOMContentLoaded", () => {
+});
+
+</script>
 <script>
   window.addEventListener("DOMContentLoaded", () => {
   document.getElementById("start-screen").classList.add("show");
 });
+
+window.addEventListener("DOMContentLoaded", () => {
+});
+
 </script>
   <meta charset="utf-8"/>
   <meta content="width=device-width,initial-scale=1" name="viewport"/>
@@ -22,11 +38,19 @@
    Tricky Turns
   </title>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js">
-  </script>
+  
+window.addEventListener("DOMContentLoaded", () => {
+});
+
+</script>
 <script>
   window.addEventListener("DOMContentLoaded", () => {
   document.getElementById("start-screen").classList.add("show");
 });
+
+window.addEventListener("DOMContentLoaded", () => {
+});
+
 </script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&amp;display=swap" rel="stylesheet"/>
   <style>
@@ -925,11 +949,19 @@ bestScoreText.setText('Best: ' + highScore);
         yoyo:true, duration:80, ease:'Sine.easeOut'
       });
     }
-  </script>
+  
+window.addEventListener("DOMContentLoaded", () => {
+});
+
+</script>
 <script>
   window.addEventListener("DOMContentLoaded", () => {
   document.getElementById("start-screen").classList.add("show");
 });
+
+window.addEventListener("DOMContentLoaded", () => {
+});
+
 </script>
   <div id="fade-screen">
   </div>
