--- a/index.html
+++ b/index.html
@@ -2,15 +2,35 @@
 <html lang="en">
  <head>
   <script src="https://sdk.minepi.com/pi-sdk.js">
-  </script>
+  
+window.addEventListener("DOMContentLoaded", () => {
+});
+
+</script>
 <script>
+  window.addEventListener("DOMContentLoaded", () => {
   document.getElementById("start-screen").classList.add("show");
+});
+
+window.addEventListener("DOMContentLoaded", () => {
+});
+
 </script>
   <script>
    Pi.init({ version: "2.0", sandbox: true });
-  </script>
+  
+window.addEventListener("DOMContentLoaded", () => {
+});
+
+</script>
 <script>
+  window.addEventListener("DOMContentLoaded", () => {
   document.getElementById("start-screen").classList.add("show");
+});
+
+window.addEventListener("DOMContentLoaded", () => {
+});
+
 </script>
   <meta charset="utf-8"/>
   <meta content="width=device-width,initial-scale=1" name="viewport"/>
@@ -18,29 +38,24 @@
    Tricky Turns
   </title>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js">
-  </script>
+  
+window.addEventListener("DOMContentLoaded", () => {
+});
+
+</script>
 <script>
+  window.addEventListener("DOMContentLoaded", () => {
   document.getElementById("start-screen").classList.add("show");
+});
+
+window.addEventListener("DOMContentLoaded", () => {
+});
+
 </script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&amp;display=swap" rel="stylesheet"/>
   <style>
 
-  #best-score-hud {
-  font-size: 1.6rem;
-  -webkit-text-stroke: 1px #000;
-  text-shadow: none;
-
-    position: absolute;
-    top: 64px;
-    left: 16px;
-    color: #fff;
-    font-family: 'Poppins', sans-serif;
-    font-size: 1rem;
-    font-weight: 600;
-    text-shadow: 0 0 4px #000;
-    z-index: 2;
-    display: none;
-  }
+  
 
   /* GAME OVER heading animation */
   @keyframes popFade {
@@ -411,8 +426,7 @@
   </div>
   <div class="bg-cloud three">
   </div>
-  <div id="best-score-hud">Best: 0</div>
-<div class="bg-cloud four">
+  <div class="bg-cloud four">
   </div>
   <div id="start-screen">
    <div id="user-info">
@@ -670,10 +684,21 @@ function create() {
       points=this.physics.add.group();
 
       // HUD
-      scoreText=this.add.text(16,44,'Score: 0',{
-        fontFamily:'Poppins', fontSize:'36px',
-        color:'#fff', stroke:'#000', strokeThickness:4
-      }).setDepth(2).setVisible(false);
+      scoreText = this.add.text(16, 64, 'Score: 0', {
+  fontFamily: 'Poppins',
+  fontSize: '36px',
+  color: '#fff',
+  stroke: '#000',
+  strokeThickness: 4
+}).setDepth(2).setVisible(false);
+
+bestScoreText = this.add.text(16, 20, 'Best: ' + highScore, {
+  fontFamily: 'Poppins',
+  fontSize: '36px',
+  color: '#fff',
+  stroke: '#000',
+  strokeThickness: 4
+}).setDepth(2).setVisible(false);
 
       // initialize highScore from localStorage if using guest
       if (useLocalHighScore) {
@@ -792,8 +817,9 @@ document.getElementById('startBtn').addEventListener('click', ()=>{
     gameStarted=true;
     document.querySelector('canvas').style.visibility='visible';
     document.getElementById('best-score-hud').style.display = 'block';
-document.getElementById('best-score-hud').innerText = `Best: ${highScore}`;
+bestScoreText.setText('Best: ' + highScore);
 scoreText.setVisible(true);
+    bestScoreText.setVisible(true);
     pauseIcon.setVisible(true);
     muteIcon.setVisible(true);
     scheduleSpawn();
@@ -869,7 +895,7 @@ document.getElementById('homeBtn').addEventListener('click', () => {
         const fs = document.getElementById('finalScore'); fs.innerText=score; fs.style.transform='scale(1.3)'; fs.style.transition='transform 0.4s ease'; setTimeout(()=>fs.style.transform='scale(1)', 50);
         if(score > highScore){
           highScore = score;
-document.getElementById('best-score-hud').innerText = `Best: ${highScore}`;
+bestScoreText.setText('Best: ' + highScore);
           sfx.newBest.play();
         }
         document.getElementById('bestScore').innerText = highScore;
@@ -930,9 +956,19 @@ document.getElementById('best-score-hud').innerText = `Best: ${highScore}`;
         yoyo:true, duration:80, ease:'Sine.easeOut'
       });
     }
-  </script>
+  
+window.addEventListener("DOMContentLoaded", () => {
+});
+
+</script>
 <script>
+  window.addEventListener("DOMContentLoaded", () => {
   document.getElementById("start-screen").classList.add("show");
+});
+
+window.addEventListener("DOMContentLoaded", () => {
+});
+
 </script>
   <div id="fade-screen">
   </div>
