--- a/index.html
+++ b/index.html
@@ -3,15 +3,9 @@
  <head>
   <script src="https://sdk.minepi.com/pi-sdk.js">
   </script>
-<script>
-  document.getElementById("start-screen").classList.add("show");
-</script>
   <script>
    Pi.init({ version: "2.0", sandbox: true });
   </script>
-<script>
-  document.getElementById("start-screen").classList.add("show");
-</script>
   <meta charset="utf-8"/>
   <meta content="width=device-width,initial-scale=1" name="viewport"/>
   <title>
@@ -19,56 +13,8 @@
   </title>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js">
   </script>
-<script>
-  document.getElementById("start-screen").classList.add("show");
-</script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&amp;display=swap" rel="stylesheet"/>
   <style>
-
-  #best-score-hud {
-  font-size: 1.6rem;
-  -webkit-text-stroke: 1px #000;
-  text-shadow: none;
-
-    position: absolute;
-    top: 64px;
-    left: 16px;
-    color: #fff;
-    font-family: 'Poppins', sans-serif;
-    font-size: 1rem;
-    font-weight: 600;
-    text-shadow: 0 0 4px #000;
-    z-index: 2;
-    display: none;
-  }
-
-  /* GAME OVER heading animation */
-  @keyframes popFade {
-    0% { transform: scale(0.8); opacity: 0; }
-    60% { transform: scale(1.1); opacity: 1; }
-    100% { transform: scale(1); }
-  }
-  #game-over-screen h1 {
-    animation: popFade 0.6s ease-out;
-  }
-  #rankMessage {
-    animation: popFade 0.8s ease-out 0.3s both;
-  }
-  .results {
-    transition: transform 0.4s ease;
-  }
-
-  /* Smooth screen transitions */
-  #start-screen, #game-over-screen, #leaderboard-screen {
-    opacity: 0;
-    transform: scale(0.98);
-    transition: opacity 0.5s ease, transform 0.5s ease;
-  }
-  #start-screen.show, #game-over-screen.show, #leaderboard-screen.show {
-    opacity: 1;
-    transform: scale(1);
-  }
-
    * { margin:0; padding:0; box-sizing:border-box; }
     html, body { width:100%; height:100%; overflow:hidden; }
     body {
@@ -411,8 +357,7 @@
   </div>
   <div class="bg-cloud three">
   </div>
-  <div id="best-score-hud">Best: 0</div>
-<div class="bg-cloud four">
+  <div class="bg-cloud four">
   </div>
   <div id="start-screen">
    <div id="user-info">
@@ -586,11 +531,11 @@ li.innerHTML = `<strong>${e.username}</strong><strong>${e.score}</strong>`;
   list.appendChild(li);
 });
 
-      const lb = document.getElementById('leaderboard-screen'); lb.style.display='flex'; lb.classList.add('show');
+      document.getElementById('leaderboard-screen').style.display = 'flex';
     }
     document.getElementById('viewLeaderboardBtn').addEventListener('click', showHomeLeaderboard);
     document.getElementById('closeLeaderboardBtn').addEventListener('click', ()=>{
-      const lb = document.getElementById('leaderboard-screen'); lb.classList.remove('show'); setTimeout(()=>lb.style.display='none', 500);
+      document.getElementById('leaderboard-screen').style.display = 'none';
     });
 
     // —— Game & Leaderboard logic ——
@@ -670,7 +615,7 @@ function create() {
       points=this.physics.add.group();
 
       // HUD
-      scoreText=this.add.text(16,44,'Score: 0',{
+      scoreText=this.add.text(16,16,'Score: 0',{
         fontFamily:'Poppins', fontSize:'36px',
         color:'#fff', stroke:'#000', strokeThickness:4
       }).setDepth(2).setVisible(false);
@@ -788,12 +733,10 @@ document.getElementById('startBtn').addEventListener('click', ()=>{
   fadeIn(() => {
     document.getElementById('user-info').style.display='none';
     document.getElementById('viewLeaderboardBtn').style.display='none';
-    document.getElementById('start-screen').classList.remove('show');
+    document.getElementById('start-screen').style.display='none';
     gameStarted=true;
     document.querySelector('canvas').style.visibility='visible';
-    document.getElementById('best-score-hud').style.display = 'block';
-document.getElementById('best-score-hud').innerText = `Best: ${highScore}`;
-scoreText.setVisible(true);
+    scoreText.setVisible(true);
     pauseIcon.setVisible(true);
     muteIcon.setVisible(true);
     scheduleSpawn();
@@ -866,10 +809,9 @@ document.getElementById('homeBtn').addEventListener('click', () => {
       this.time.delayedCall(700,()=>{
         this.physics.pause();
         document.querySelector('canvas').style.visibility='hidden';
-        const fs = document.getElementById('finalScore'); fs.innerText=score; fs.style.transform='scale(1.3)'; fs.style.transition='transform 0.4s ease'; setTimeout(()=>fs.style.transform='scale(1)', 50);
+        document.getElementById('finalScore').innerText=score;
         if(score > highScore){
           highScore = score;
-document.getElementById('best-score-hud').innerText = `Best: ${highScore}`;
           sfx.newBest.play();
         }
         document.getElementById('bestScore').innerText = highScore;
@@ -913,7 +855,7 @@ document.getElementById('best-score-hud').innerText = `Best: ${highScore}`;
               }
             }
 
-            const go = document.getElementById('game-over-screen'); go.style.display='flex'; go.classList.add('show');
+            document.getElementById('game-over-screen').style.display='flex';
           }).catch(console.error);
 
       });
@@ -931,9 +873,6 @@ document.getElementById('best-score-hud').innerText = `Best: ${highScore}`;
       });
     }
   </script>
-<script>
-  document.getElementById("start-screen").classList.add("show");
-</script>
   <div id="fade-screen">
   </div>
  </body>
