--- a/index.html
+++ b/index.html
@@ -321,13 +321,13 @@
 #leaderboard li,
 #leaderboardEntriesHome li {
   /* replace the 4-value padding shorthand so we can set a larger left inset */
-  padding: 0.5rem 0.8rem 0.5rem 2rem;   /* top/right/bottom/left */ :contentReference[oaicite:0]{index=0}
+  padding: 0.5rem 0.8rem 0.5rem 2rem;   /* top/right/bottom/left */ 
 }
 
 /* enlarge the gap after the badge */
 #leaderboard li::before,
 #leaderboardEntriesHome li::before {
-  margin-right: 1.2rem;                  /* was 0.8rem */ :contentReference[oaicite:1]{index=1}
+  margin-right: 1.2rem;                  /* was 0.8rem */ 
   /* optionally center multi-digit ranks in a fixed box: */
   min-width: 2rem;
   text-align: center;
